# learnopengl

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: camera.cpp  camera.h  glad.c  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
src/assets/shaders/: light.vert  main.frag  main.vert  shader.frag  shader.vert  vertex.glsl
src/shaders/: fragment.glsl
